exports[`<RegisterForm /> Should render <Button /> 1`] = `1`

exports[`<RegisterForm /> should render <H1> 1`] = `1`

exports[`<RegisterForm /> should render <form> 1`] = `1`

exports[`<RegisterForm /> should render Fields 1`] = `3`

exports[`validate() should throw "Invald email address" 1`] = `
Object {
  "email": "Ungültige Email-Adresse",
}
`

exports[`validate() should throw "Passwords do not match" 1`] = `
Object {
  "confirm": "Passwörter stimmen nicht überein!",
}
`

exports[`validate() should throw "Required" on confirm 1`] = `
Object {
  "confirm": "Pflichtfeld",
}
`

exports[`validate() should throw "Required" on empty email 1`] = `
Object {
  "email": "Pflichtfeld",
}
`

exports[`validate() should throw "Required" on empty name 1`] = `
Object {
  "name": "Pflichtfeld",
}
`

exports[`validate() should throw "Required" on password 1`] = `
Object {
  "confirm": "Passwörter stimmen nicht überein!",
  "password": "Pflichtfeld",
}
`
